# BLE-Network-Helper

./: CMakeLists.txt  Doxyfile  README.md
documentation/html/: README_8md.html  annotated.html  classes.html  dir_09e761304027c904456130627fd4dcf5.html  dir_b73b02d482d1c4a3db20c3d9ad52d395.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.html  md_README.html  menudata.js  my__crc_8c.html  my__crc_8h.html  my__crc_8h_source.html  my__custom__models__def_8h.html  my__custom__models__def_8h_source.html  network__msg__struct_8c.html  network__msg__struct_8h.html  network__msg__struct_8h_source.html  pages.html  structprov__add__appkey__t-members.html  structprov__add__appkey__t.html  structprov__add__netkey__t-members.html  structprov__add__netkey__t.html  structprov__key__fail__t-members.html  structprov__key__fail__t.html  structprov__key__success__t-members.html  structprov__key__success__t.html  structprov__mode__get__t-members.html  structprov__mode__get__t.html  structprov__mode__node__reset__t-members.html  structprov__mode__node__reset__t.html  structprov__mode__set__t-members.html  structprov__mode__set__t.html  structprov__mode__status__t-members.html  structprov__mode__status__t.html  (+4 more)
documentation/latex/: annotated.tex  dir_09e761304027c904456130627fd4dcf5.tex  files.tex  (+27 more)
includes/: esp_ble_mesh_config_model_api.h  esp_ble_mesh_defs.h  my_crc.h  my_custom_models_def.h  my_custom_models_def_private.h  my_endian.h  network_msg_struct.h
srcs/: my_crc.c  network_msg_struct.c
(+35 files in other folders)
